unpackaged/objects/Monitoring_Log__c.object
<CustomObject>
	<fields>
		<fullName>End_Date__c</fullName>
		<label>End Date</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Environment__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>Monitoring Logs</relationshipLabel>
		<relationshipName>Monitoring_Logs</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Error_Message__c</fullName>
		<label>Error Message</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Function_Result__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Function Result</label>
		<referenceTo>copado__Result__c</referenceTo>
		<relationshipLabel>Monitoring Logs</relationshipLabel>
		<relationshipName>Monitoring_Logs</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Integration_User__c</fullName>
		<label>Integration User</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Monitored_Environment__c</fullName>
		<label>Monitored Environment</label>
		<referenceTo>Monitored_Environments__c</referenceTo>
		<relationshipLabel>Monitoring Logs</relationshipLabel>
		<relationshipName>Monitoring_Logs</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>Pipeline__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipLabel>Monitoring Logs</relationshipLabel>
		<relationshipName>Monitoring_Logs</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Start_Date__c</fullName>
		<label>Start Date</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Status__c</fullName>
		<label>Status</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Started</fullName>
					<default>true</default>
					<label>Started</label>
				</value>
				<value>
					<fullName>Success</fullName>
				</value>
				<value>
					<fullName>Failed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Monitoring Log</label>
	<listViews>
		<fullName>All</fullName>
		<columns>NAME</columns>
		<columns>Pipeline__c</columns>
		<columns>Environment__c</columns>
		<columns>Status__c</columns>
		<columns>Start_Date__c</columns>
		<columns>End_Date__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>A-{0000}</displayFormat>
		<label>Monitoring Log Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Monitoring Logs</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>